2012-07-24  Dana Jansens  <danakj@chromium.org>

        [chromium] Turn the debug HUD into a layer so that it can be drawn as a WebCompositorQuad
        https://bugs.webkit.org/show_bug.cgi?id=92182

        Reviewed by Adrienne Walker.

        By changing the HUD into a quad, we are able to create a HUD and pass
        it to the host compositor, allowing the HUD to be used for renderers
        under Ubercompositor.

        This also removes the special drawing code for the HUD from
        LayerRendererChromium, allowing us to move finishDrawingFrame
        into LayerRendererChromium as a private method and remove it
        from the CCRenderer interface.

        Finally, we can remove the CCFontAtlas transport code from CCProxy
        and its implementations as the atlas can be synced to impl thread
        through the usual layer commit mechanism.

        The debug HUD is not covered by tests.

        * WebCore.gypi:
        * platform/graphics/chromium/HeadsUpDisplayLayerChromium.cpp: Added.
        (WebCore):
        (WebCore::HeadsUpDisplayLayerChromium::create):
        (WebCore::HeadsUpDisplayLayerChromium::HeadsUpDisplayLayerChromium):
        (WebCore::HeadsUpDisplayLayerChromium::~HeadsUpDisplayLayerChromium):
        (WebCore::HeadsUpDisplayLayerChromium::createCCLayerImpl):
        * platform/graphics/chromium/HeadsUpDisplayLayerChromium.h: Added.
        (WebCore):
        (HeadsUpDisplayLayerChromium):
        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::drawFrame):
        (WebCore::LayerRendererChromium::cleanupSharedObjects):
        * platform/graphics/chromium/LayerRendererChromium.h:
        (LayerRendererChromium):
        * platform/graphics/chromium/cc/CCDebugRectHistory.cpp:
        (WebCore::CCDebugRectHistory::savePropertyChangedRects):
        * platform/graphics/chromium/cc/CCDebugRectHistory.h: