@@ -1,3 +1,12 @@
+2012-07-25  Andrey Adaikin  <aandrey@chromium.org>
+
+        Web Inspector: Add more jsdocs to InjectedScriptSource.js
+        https://bugs.webkit.org/show_bug.cgi?id=92255
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/InjectedScriptSource.js:
+
 2012-07-24  Dana Jansens  <danakj@chromium.org>
 
         [chromium] Turn the debug HUD into a layer so that it can be drawn as a WebCompositorQuad
